--- a/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
@@ -33,31 +33,31 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Label Content="BeckEnd Platform" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="40" FontWeight="Bold"></Label>
-            <Button Command="{Binding ButtonFunc}" CommandParameter="Post" Grid.Column="0" Grid.Row="0" Width="144"  Content="REST Post Send" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="0,0,0,549"  />
-            <Button Command="{Binding ButtonFunc}" CommandParameter="Get" Grid.Column="0" Grid.Row="0" Width="156"  Content="REST Get Send" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="149,0,0,549"  />
-
         </Grid>
         <Grid Grid.Row="1">
-            <Button Command="{Binding ButtonFunc}" CommandParameter="Post" Grid.Column="0" Grid.Row="0" Width="144"  Content="Action Post Send" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
-            <Button Command="{Binding ButtonFunc}" CommandParameter="Get" Grid.Column="0" Grid.Row="0" Width="156"  Content="Alive Send" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="149,0,0,0"   />
-
+            <Button Command="{Binding ButtonFunc}" CommandParameter="ActionIN" Grid.Column="0" Grid.Row="0" Width="144"  Content="Action IN" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="ActionOUT" Grid.Column="0" Grid.Row="0" Width="144"  Content="Action OUT" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="Get" Grid.Column="0" Grid.Row="0" Width="156"  Content="Alive Send" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="1124,0,0,0"   />
+            <Label Content="TAG" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="328,0,0,0"></Label>
+            <TextBox HorizontalAlignment="Left" Margin="385,27,0,0" TextWrapping="Wrap" Text="{Binding TagInfo}" VerticalAlignment="Top" Width="268"/>
+            <Label Content="Distance(mm)" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="668,0,0,0"></Label>
+            <TextBox HorizontalAlignment="Left" Margin="813,0,0,0" TextWrapping="Wrap" Text="{Binding DistanceInfo}" VerticalAlignment="Center" Width="268"/>
+          
         </Grid>
         <Grid Grid.Row="2">
-          
-                <TabControl BorderBrush="White" BorderThickness="1" FontSize="16" FontWeight="Bold" FontFamily="맑은고딕" Margin="5">
-                    <TabControl.Background>
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="Black"/>
-                            <GradientStop Color="#FF0C0202" Offset="1"/>
-                        </LinearGradientBrush>
-                    </TabControl.Background>
-                    <TabItem Header="Log" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#00000000">
-                        <ListBox Background="DarkGray" ItemsSource="{Binding ListBackEndLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" >
-                        </ListBox>
-                    </TabItem>
-                </TabControl>
-           
-          
+
+            <TabControl BorderBrush="White" BorderThickness="1" FontSize="16" FontWeight="Bold" FontFamily="맑은고딕" Margin="5">
+                <TabControl.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black"/>
+                        <GradientStop Color="#FF0C0202" Offset="1"/>
+                    </LinearGradientBrush>
+                </TabControl.Background>
+                <TabItem Header="Log" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#00000000">
+                    <ListBox Background="DarkGray" ItemsSource="{Binding ListBackEndLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" >
+                    </ListBox>
+                </TabItem>
+            </TabControl>
         </Grid>
     </Grid>
 </UserControl>    
