Vision Drop Pickup 이벤트시 2초 지난 EPC데이터들은 전부 삭제

--- a/WATA.LIS/Modules/WATA.LIS.VISION.Camera/Views/VisionCamera.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.VISION.Camera/Views/VisionCamera.xaml
@@ -52,7 +52,8 @@
                     </TabItem>
                 </TabControl>
             </Grid>
-            <Grid Grid.Column="1" RenderTransformOrigin="0.513,0.422">
+            <Grid Grid.Column="1">
+                <Button Command="{Binding ButtonFunc}" CommandParameter="Vision" Width="156"  Content="Vision Event" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"    />
 
             </Grid>
         </Grid>
