--- a/WATA.LIS/WATA.LIS/Views/MainWindow.xaml
+++ b/WATA.LIS/WATA.LIS/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         xmlns:core="clr-namespace:WATA.LIS.Core;assembly=WATA.LIS.Core"
-        Title="MainWindow" Height="800" Width="1280"   Left="650" Top="10">
+        Title="WATA LIS" Height="800" Width="1500" Topmost="True" WindowStyle="None"   Left="650" Top="10">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.1*"></RowDefinition>
