1.Location 추가 2.RFTAG Interval 2배로 변경 Command R -> Command Q 3. UI 수정 4. Drop Scan Timing 5초에서 3초로 변경

--- a/WATA.LIS/Modules/WATA.LIS.Main/Views/MainUI.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.Main/Views/MainUI.xaml
@@ -36,12 +36,12 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions >
                 <ColumnDefinition Width="1.*"></ColumnDefinition>
-                <ColumnDefinition Width="0.4*"></ColumnDefinition>
+                <ColumnDefinition Width="0.2*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
 
                 <Grid.ColumnDefinitions >
-                    <ColumnDefinition Width="1.*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.9*"></ColumnDefinition>
                     <ColumnDefinition Width="0.5*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
@@ -73,7 +73,7 @@
                                 </LinearGradientBrush>
                             </TabControl.Background>
                             <TabItem Header="Tag" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#00000000">
-                                <ListBox Background="DarkGray" ItemsSource="{Binding ListRFIDLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" FontSize="10" >
+                                <ListBox Background="DarkGray" ItemsSource="{Binding ListRFIDLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" FontSize="5" >
                                 </ListBox>
                             </TabItem>
                         </TabControl>
@@ -90,7 +90,7 @@
                                 </LinearGradientBrush>
                             </TabControl.Background>
                             <TabItem Header="Vision" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#00000000">
-                                <ListBox Background="DarkGray" ItemsSource="{Binding VisionLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" FontSize="10" >
+                                <ListBox Background="DarkGray" ItemsSource="{Binding VisionLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" FontSize="5" >
                                 </ListBox>
                             </TabItem>
                         </TabControl>
@@ -104,6 +104,8 @@
                     <RowDefinition Height="1.*"></RowDefinition>
                     <RowDefinition Height="1.*"></RowDefinition>
                     <RowDefinition Height="1.*"></RowDefinition>
+                    <RowDefinition Height="1.*"></RowDefinition>
+                    <RowDefinition Height="1.*"></RowDefinition>
                     <RowDefinition Height="5.*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
@@ -111,7 +113,7 @@
                 </Grid.ColumnDefinitions>
 
                 <Grid Grid.Row="0" Grid.Column="0" Margin="5">
-                        <Label Content="SYSTEM STATUS" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></Label>
+                    <Label Content="SYSTEM STATUS" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></Label>
                 </Grid>
 
                 <Grid Grid.Row="1" Grid.Column="0" Margin="5">
@@ -122,10 +124,13 @@
                     </Grid.ColumnDefinitions>
                     <Label Content="H(mm)" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></Label>
                     <Ellipse Width="20" Height="20" Grid.Column="1" Fill="{Binding Distance_Active}" StrokeThickness="1" Stroke="Black"></Ellipse>
+                 </Grid>
+
+                <Grid Grid.Row="2" Grid.Column="0" Margin="5">
                     <Label Content="{Binding Distance_Value}" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="10"></Label>
                 </Grid>
 
-                <Grid Grid.Row="2" Grid.Column="0" Margin="5">
+                <Grid Grid.Row="3" Grid.Column="0" Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="100"></ColumnDefinition>
                         <ColumnDefinition Width="100"></ColumnDefinition>
@@ -133,10 +138,14 @@
                     </Grid.ColumnDefinitions>
                     <Label Content="EPC" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></Label>
                     <Ellipse Width="20" Height="20" Grid.Column="1" Fill="{Binding RFID_Active}" StrokeThickness="1" Stroke="Black"></Ellipse>
-                    <Label Content="{Binding RFID_Value}" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></Label>
+             
                 </Grid>
 
-                <Grid Grid.Row="3" Grid.Column="0" Margin="5">
+                <Grid Grid.Row="4" Grid.Column="0" Margin="5">
+                    <Label Content="{Binding RFID_Value}" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="15"></Label>
+                </Grid>
+
+                <Grid Grid.Row="5" Grid.Column="0" Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="100"></ColumnDefinition>
                         <ColumnDefinition Width="100"></ColumnDefinition>
@@ -147,18 +156,18 @@
                     <Label Content="{Binding VISION_Value}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></Label>
                 </Grid>
 
-                <Grid Grid.Row="4" Grid.Column="0" Margin="5">
+                <Grid Grid.Row="6" Grid.Column="0" Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="100"></ColumnDefinition>
                         <ColumnDefinition Width="100"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Label Content="Platform" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></Label>
+                    <Label Content="Platform" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="5,0,0,0"></Label>
                     <Ellipse Width="20" Height="20" Grid.Column="1" Fill="{Binding BACKEND_Active}" StrokeThickness="1" Stroke="Black"></Ellipse>
                     <Label Content="{Binding BACKEND_Value}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></Label>
                 </Grid>
 
-                <Grid Grid.Row="5">
+                <Grid Grid.Row="7">
                     <TabControl BorderBrush="White" BorderThickness="1" FontSize="16" FontWeight="Bold" FontFamily="맑은고딕" Margin="5">
                         <TabControl.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
