--- a/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
@@ -29,6 +29,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="70"></RowDefinition>
             <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
             <RowDefinition Height="1.*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
@@ -37,21 +38,20 @@
         <Grid Grid.Row="1">
             <Button Command="{Binding ButtonFunc}" CommandParameter="ActionIN" Grid.Column="0" Grid.Row="0" Width="144"  Content="Action IN" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
             <Button Command="{Binding ButtonFunc}" CommandParameter="ActionOUT" Grid.Column="0" Grid.Row="0" Width="144"  Content="Action OUT" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"   />
-            <Button Command="{Binding ButtonFunc}" CommandParameter="Get" Grid.Column="0" Grid.Row="0" Width="156"  Content="Alive Send" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="1124,0,0,0"   />
             <Label Content="TAG" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="328,0,0,0"></Label>
             <TextBox HorizontalAlignment="Left" Margin="385,27,0,0" TextWrapping="Wrap" Text="{Binding TagInfo}" VerticalAlignment="Top" Width="268"/>
             <Label Content="Distance(mm)" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="668,0,0,0"></Label>
             <TextBox HorizontalAlignment="Left" Margin="813,0,0,0" TextWrapping="Wrap" Text="{Binding DistanceInfo}" VerticalAlignment="Center" Width="268"/>
-          
         </Grid>
         <Grid Grid.Row="2">
-
-
+            <Button Command="{Binding ButtonFunc}" CommandParameter="Get" Grid.Column="0" Grid.Row="0" Width="144"  Content="Alive" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="Location" Grid.Column="0" Grid.Row="0" Width="144"  Content="Location" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"/>
+        </Grid>
+        <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.6*"></ColumnDefinition>
                 <ColumnDefinition Width="0.4*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-
 
             <TabControl  Grid.Column="0" BorderBrush="White" BorderThickness="1" FontSize="16" FontWeight="Bold" FontFamily="맑은고딕" Margin="5">
                 <TabControl.Background>
